--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
       body {
         margin: 0;
       }
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
     </style>
   </head>
   <body>
@@ -20,7 +24,7 @@
       <span>Score: <span id="scoreEl">0</span></span>
     </div>
     <canvas></canvas>
-
+    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.2/gsap.min.js"
       integrity="sha512-kVlGhj2qFy+KBCFuvjBJTGUMxbdqJKs4yK2jh0e0VPhWUPiPC87bzm4THmaaIee3Oj7j6sDpTTgm2EPPiESqBg=="
@@ -32,6 +36,6 @@
     <script src="./js/classes/Particle.js"></script>
     <script src="./js/classes/Projectile.js"></script>
     <script src="./js/eventListeners.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/frontend.js"></script>
   </body>
 </html>
